--- a/css/projects.css
+++ b/css/projects.css
@@ -93,6 +93,7 @@
             margin-top: 38px;
             margin-left: 35px;
             max-width: 984px;
+            height: 496px;
             border-radius: 22px;
             display: flex;
             overflow: hidden;
@@ -103,6 +104,14 @@
           width: 328px;
           background: #C4EB28;
       }       
+
+      .rt {
+        width: 656px;
+    } 
+
+    .rt img {
+        width: 120%
+    }
        
       .lf1 {
         background: #E1CC81;
@@ -120,28 +129,34 @@
         padding-bottom: 100px;
       }
 
-      .rt img {
-          width: 100%
+      .pole {
+          display: flex;
+          align-items: center;
       }
 
       .pic {
-        margin: 47px 0 47px 0;
-        width: 100%;
-        display: flex;
-        align-items: center;
+        margin: 47px 0 47px 30px;
+        width: 505px;
+        height: 316px;
+        border-radius: 22px;
+        overflow: hidden;
+        /* display: flex; */
+        /* align-items: center; */
     }
 
     #pic2 {
-        padding-left: 30px;
+        /* padding-left: 30px; */
+        width: 100%;
     }
 
-    .pic > p {
+    .pole > p {
+        display: block;
         font-family: Georgia;
         font-style: italic;
         font-weight: normal;
         font-size: 16px;
         line-height: 130%;
-        width: 273px;
+        width: 300px;
         margin-left: 41px;
         padding-left: 0;
     }
@@ -153,28 +168,48 @@
             position: absolute;
             left: -100%;
         }
+
+        .p__title{
+            max-width: 80%;
+            margin-left: 5px;
+            margin-top: 20px;
+        }
+
         .proj {
             margin-left: 20px;
             max-width: 725px;
+            height: 370px;
         }
 
         .p1, .p2 {
             margin-left: 15px;
         }
 
-        
-      /* .pic {
-        width: 100%;
-        
-       } */
+        .rt {
+            width: 385px;
+        }
 
-    #pic2 {
+        .rt img {
+            width: 150%;
+        }
+        
+      .pic {
         width: 360px;
         height: 364px;
-        padding-left: 20px;
+        overflow: hidden;
+        
+       }
+
+    #pic2 {
+        width: 170%;
+    }
+
+    .pic p {
+        position: relative;
+        left: -100px;
     }
     .sec1 h1{
-        padding-left: 50px;
+        padding-left: 35px;
     }
     .sec1__descript{
         margin-top: 100px;
@@ -234,7 +269,7 @@
             margin: 20px 40px 0 0;            
         }
 
-        .pic p{
+        .pole p{
             display: none;
         }
 
