--- a/css/incubator.css
+++ b/css/incubator.css
@@ -17,7 +17,7 @@
 .sec1 h2,
 .sec1 p,
 #tgs,
-#addr {
+.address {
     padding-left: 65px;
     width: 720px;
 }
@@ -65,20 +65,20 @@
     color: var(--mainColor);
     border: 2px solid var(--mainColor);
     border-radius: 23px;
-    margin-right: 16px;
+    margin-right: 14px;
 }
 
 #tgs a {
     color: var(--hoverColor)
 }
 
-#addr {
+.address {
     display: block;
     margin-top: 22px;
     margin-bottom: 48px;
 }
 
-#addr>img {
+.address>img {
     margin-right: 14px;
 
 }
@@ -100,13 +100,14 @@
     /* overflow: hidden; */
     max-width: 311px;
     height: 480px;
-    margin-right: 16px;
     box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.14);
     border-radius: 22px;
     /* display: flex;
     flex-wrap: wrap;
     align-content: space-between; */
-
+}
+.card>div:not(:last-child) {
+    margin-right: 16px;
 }
 
 .card_img {
@@ -172,9 +173,8 @@
 
 
 #cons {
-    margin-top: 30px;
+    margin-top: 18px;
     /* margin-bottom: 70px; */
-    display: flex;
 }
 
 #cons h1 {
@@ -186,10 +186,11 @@
 
 }
 
-#addr1 {
+.address {
     /* padding-top: 65px; */
     width: 550px;
-    margin-left: 30px;
+    margin-left: 20px;
+
 }
 
 
@@ -202,7 +203,6 @@
 
 #m2 {
     max-width: 620px;
-    margin-top: 75px;
 }
 
 #m2>span {
@@ -300,7 +300,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 104px;
+    margin-bottom: 61px;
 }
 
 .tel div:nth-child(2) {
@@ -320,7 +320,6 @@
 
 #sld1 {
     width: 100%;
-    margin-top: 24px;
     padding-right: 90px;
     padding-left: 36px;
 }
@@ -424,9 +423,8 @@
     .sec1 h2,
     .sec1 p,
     #tgs,
-    #addr {
+    .address {
         padding-left: 20px;
-        /* width: 720px;  */
     }
 
     #m1 {
@@ -467,7 +465,7 @@
         width: 360px;
     }
 
-    .sec1 h1, .sec1 h2, .sec1 p, #addr {
+    .sec1 h1, .sec1 h2, .sec1 p, .address {
         padding-left: 10px;
         max-width: 330px;
     }
@@ -528,10 +526,6 @@
     #cons {
         margin-bottom: 17px;
         flex-direction: column;
-    }
-
-    #addr1 {
-        margin-left: 20px;
     }
 
     #m1 { 
