--- a/css/education.css
+++ b/css/education.css
@@ -28,10 +28,6 @@
 }
 
 
-
-
-
-
 .sec1 p {
     font-family: Georgia;
     font-style: italic;
@@ -94,21 +90,31 @@
     /* margin-bottom: 53px; */
     display: flex;
     justify-content: space-between;
-
 }
+
 
 .card>div {
-    /* overflow: hidden; */
     max-width: 311px;
-    height: 480px;
-    margin-right: 16px;
     box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.14);
     border-radius: 22px;
-    /* display: flex;
-    flex-wrap: wrap;
-    align-content: space-between; */
-
 }
+
+.card>div:not(:last-child) {
+    margin-right: 16px;
+}
+
+.courses-row>div{
+    height: 480px;
+}
+
+#car1>div {
+    padding-left: 30px;
+}
+
+#car1 .hc1 {
+    padding-left: 0;
+}
+
 
 .card_img {
     width: 100%;
@@ -119,16 +125,12 @@
 .card h3 {
     font-style: normal;
     font-weight: bold;
-    width: 90%;
-    height: 60px;
-    ;
+    margin-top: 10px;
+    margin-bottom: 14px;
     font-size: 22px;
-    /* font-size: 1.3vw; */
     line-height: 21px;
     position: relative;
     top: -90px;
-    left: 24px;
-    /* padding-right: 10px; */
     color: #FFFFFF;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
 }
@@ -137,7 +139,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 20px;
+    line-height: 1.3;
     padding: 24px;
     position: relative;
     top: -60px;
@@ -147,7 +149,6 @@
 .hc1 {
     position: relative;
     top: 450px;
-    height: 170px;
     overflow: auto;
 }
 
@@ -157,32 +158,50 @@
 
 }
 
+.courses-row .hc1 {
+    height: 170px;
+}
 
-/* карточка */
+.courses-row h3 {
+    height: 60px;
+    margin:0;
+    padding-left: 20px;
+    padding-right: 10px;
+}
 
+.card h3.c2a {
+    left: 0;
+}
+
+#car2, 
+#car4 {
+    margin-bottom: 30px;
+}
 
 #car3,
 #car6 {
     width: 70%;
 }
 
-#car7 {
-    margin-bottom: 141px;
+.feedback {
+    margin-top: 140px;
 }
 
+
+
 @media (max-width: 768px) { 
-.sec1 h1,
-.sec1 h2,
-.sec1 p,
-#tgs,
-#addr {
-    padding-left: 35px;
-}
-.card {
-    padding-left: 25px;
-    padding-right: 50px;
-    margin-bottom: 53px;
-}
+    .sec1 h1,
+    .sec1 h2,
+    .sec1 p,
+    #tgs,
+    #addr {
+        padding-left: 35px;
+    }
+    .card {
+        padding-left: 25px;
+        padding-right: 50px;
+        margin-bottom: 53px;
+    }
 
 }
 
