--- a/css/events.css
+++ b/css/events.css
@@ -13,8 +13,8 @@ button{
 	color: #000000;
 }
 .title img{
-	margin-left: 15px;
-	margin-top: 15px;
+	margin-left: 7px;
+	margin-top: 7px;
 	margin-bottom: 15px;
 }
 
@@ -171,14 +171,16 @@ color: #ffffff
     /* overflow: hidden; */
     max-width: 311px;
     height: 480px;
-    margin-right: 16px;
     box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.14);
     border-radius: 22px;
     /* display: flex;
     flex-wrap: wrap;
     align-content: space-between; */
-
 } 
+
+.card > div:not(:last-child) {
+    margin-right: 16px;
+}
 
 .card_img {
     width: 100%;
@@ -198,6 +200,11 @@ left: 24px;
 /* padding-right: 10px; */
 color: #FFFFFF;
 text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+}
+
+.c2a h3 {
+	width: auto;
+	left: 0;
 }
 
 .card div div {
@@ -228,7 +235,7 @@ top: -60px;
 .much_news{
 	margin: 0px auto;
 	margin-left: 250px;
-	margin-bottom: 131px;
+	margin-bottom: 91px;
 	width: 375px;
 }
 .much_news__row{
