--- a/css/projects.css
+++ b/css/projects.css
@@ -4,15 +4,18 @@
 .sec1 h1 {
     font-style: normal;
     font-weight: bold;
-    font-size: 42px;
-    margin-top: 75px;
+    font-size: 22px;
+    margin-top: 65px;
     }
     .p__title{
         max-width: 60%;
         margin-left: 70px;
         margin-bottom: 30px;
-        font-size: 18px;
-        font-weight: 600;
+        font-family: Georgia;
+        font-style: italic;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 130%;
     }
     /* .sec1 {
         margin-bottom: 22px;
@@ -126,7 +129,7 @@
       }
 
       .pad {
-        padding-bottom: 100px;
+        padding-bottom: 73px;
       }
 
       .pole {
@@ -135,7 +138,7 @@
       }
 
       .pic {
-        margin: 47px 0 47px 30px;
+        margin: 47px 0 27px 30px;
         width: 505px;
         height: 316px;
         border-radius: 22px;
