--- a/css/pages.css
+++ b/css/pages.css
@@ -239,7 +239,6 @@ input[type="submit"] {
         
         footer > div:nth-child(3) {
             width: 545px;
-            height: 82px;
             margin-left: 176px;
             margin-top: 39px;
             font-style: normal;
@@ -249,32 +248,16 @@ input[type="submit"] {
         }
         
         #logo {
-            width: 450px;
-            height: 153px;
-            margin-top: 28px;
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
+            width: 350px;
+            margin: 40px 0;
+            padding: 0 10px;
+        }
+
+        #logo img {
+            max-width: 100%;
         }
         
         
-        #logo > img:nth-child(1) {
-            position: relative;
-            height: 150px
-        
-        }
-        
-        #logo > img:nth-child(2) {
-            position: relative;
-            top: -17px; 
-            height: 150px
-        }
-        
-        #logo > img:nth-child(3) {
-            position: relative;
-            top: 10px; 
-            height: 180px
-        }
 
         /* Футер */
 
@@ -525,26 +508,6 @@ input[type="submit"] {
         margin: 22px 0 0 15px;
     }
 
-    #logo {
-        width: 350px;
-        margin: 50px 0 50px 15px;
-    }
-
-    #logo > img:nth-child(1) {
-        left: -18px;
-        top: 20px;
-    }
-
-    #logo > img:nth-child(2) {
-        left: -20px;
-        top: 10px;
-    }
-
-    
-    #logo > img:nth-child(3) {
-        left: -15px;
-        top: 26px;
-    }
 
     .burg1 {
         height: 680px;
