--- a/css/style.css
+++ b/css/style.css
@@ -137,29 +137,13 @@ header {
 }
 
 #logo {
-    width: 450px;
-    height: 153px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    width: 333px;
 }
 
-
-#logo>img:nth-child(1) {
-    position: relative;
-    height: 150px
-}
-
-#logo>img:nth-child(2) {
-    position: relative;
-    top: -17px;
-    height: 150px
-}
-
-#logo>img:nth-child(3) {
-    position: relative;
-    top: 10px;
-    height: 180px
+#logo img,
+#logo_android img,
+#logo_ipad img {
+    max-width: 100%;
 }
 
 
@@ -363,17 +347,6 @@ a:active {
         /* 57 */
     }
 
-
-    #logo {
-        /* width: 450px; */
-        height: 53px;
-    }
-
-    #l1 {
-        width: 150px;
-        /* border: 1px solid red; */
-    }
-
     #sec1 p,
     #sec1 h {
         width: 90%;
@@ -442,23 +415,6 @@ a:active {
         position: relative;
         top: -20px;
         left: 20px;
-    }
-
-    #logo_ipad img:nth-child(1) {
-        position: relative;
-        top: -4px;
-    }
-
-    #logo_ipad img:nth-child(2) {
-        position: relative;
-        top: -4px;
-        left: 15px;
-    }
-
-    #logo_ipad img:nth-child(3) {
-        position: relative;
-        top: 15px;
-        left: 30px;
     }
 
     #title {
@@ -713,25 +669,7 @@ a:active {
 
     #logo_android {
         display: block;
-        margin-bottom: 85px;
-    }
-
-    #logo_android img:nth-child(1) {
-        position: relative;
-        left: -6px;
-        top: 20px;
-    }
-
-    #logo_android img:nth-child(2) {
-        position: relative;
-        top: 10px;
-        left: -10px;
-    }
-
-    #logo_android img:nth-child(3) {
-        position: relative;
-        top: 28px;
-        left: 0px;
+        padding: 40px 10px;
     }
 
     /* Menu */
