--- a/css/events.css
+++ b/css/events.css
@@ -91,9 +91,12 @@ button{
 .events__flex {
 	display: flex;
 }
-/* .events__calendar {
-	width: 100%;
-} */
+
+.events__calendar {
+		padding: 30px 42px;
+		filter: drop-shadow(2px 8px 12px rgba(0,0,0,0.3));
+}
+
 .events__address {
 	margin-top: 80px;
 }
@@ -270,6 +273,10 @@ top: -60px;
 	margin-left: 10px;
 	max-width: 730px;
 }
+.events__calendar {
+	padding-left: 18px;
+}
+
 .events__calendar img, #events__address img {
 	width: 98%;
 }
@@ -330,6 +337,10 @@ top: -60px;
 
 	.events__flex {
 		flex-direction: column;
+	}
+
+	.events__calendar{
+		padding-left: 15px;
 	}
 
 	.events__calendar img {
